tests/negative/parallel_for_capture_pluseq.far
fun main() -> i64 {
  n = 0
  parallel for i in 0..<4 {
    n += 1
  }
  return n
}
